[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defillama-api"
version = "0.1.0"
description = "Python SDK for DefiLlama API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["defillama", "defi", "tvl", "cryptocurrency", "api", "sdk"]
dependencies = ["requests>=2.31.0"]

[project.urls]
Homepage = "https://api-docs.defillama.com/"

[tool.setuptools]
packages = [
  "defillama_api",
  "defillama_api.constants",
  "defillama_api.modules",
  "defillama_api.types",
]

[tool.setuptools.package-data]
defillama_api = ["py.typed"]
