[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defillama-sdk"
version = "0.1.2"
description = "Python SDK for DefiLlama API"
authors = [{name = "DefiLlama"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["defillama", "defi", "tvl", "cryptocurrency", "api", "sdk"]
dependencies = ["requests>=2.31.0"]
license-files = []

[project.urls]
Homepage = "https://api-docs.defillama.com/"
Repository = "https://github.com/DefiLlama/python-sdk"

[tool.setuptools]
packages = [
  "defillama_sdk",
  "defillama_sdk.constants",
  "defillama_sdk.modules",
  "defillama_sdk.types",
]

[tool.setuptools.package-data]
defillama_sdk = ["py.typed"]
